@@ -7,21 +7,30 @@
  */
 package org.opendaylight.restconf.nb.rfc8040.streams.listeners;
 
+import static com.google.common.base.Strings.isNullOrEmpty;
 import static java.util.Objects.requireNonNull;
 
+import com.google.common.base.Splitter;
 import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
 import com.google.common.collect.ImmutableSet;
+import java.net.URI;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.locks.StampedLock;
-import javax.inject.Inject;
-import javax.inject.Singleton;
+import javax.ws.rs.core.UriInfo;
+import org.eclipse.jdt.annotation.NonNull;
 import org.eclipse.jdt.annotation.Nullable;
 import org.opendaylight.mdsal.common.api.LogicalDatastoreType;
+import org.opendaylight.mdsal.dom.api.DOMDataBroker;
+import org.opendaylight.mdsal.dom.api.DOMDataTreeWriteOperations;
+import org.opendaylight.mdsal.dom.api.DOMDataTreeWriteTransaction;
 import org.opendaylight.mdsal.dom.api.DOMMountPointService;
 import org.opendaylight.restconf.common.errors.RestconfDocumentedException;
+import org.opendaylight.restconf.nb.rfc8040.NotificationQueryParams;
 import org.opendaylight.restconf.nb.rfc8040.URLConstants;
+import org.opendaylight.restconf.nb.rfc8040.monitoring.RestconfStateStreams;
+import org.opendaylight.restconf.nb.rfc8040.rests.services.impl.RestconfStreamsSubscriptionServiceImpl.HandlersHolder;
 import org.opendaylight.restconf.nb.rfc8040.rests.utils.RestconfStreamsConstants;
 import org.opendaylight.restconf.nb.rfc8040.utils.parser.IdentifierCodec;
 import org.opendaylight.yang.gen.v1.urn.sal.restconf.event.subscription.rev140708.CreateDataChangeEventSubscriptionInput1.Scope;
@@ -30,11 +39,10 @@ import org.opendaylight.yangtools.yang.common.ErrorTag;
 import org.opendaylight.yangtools.yang.common.ErrorType;
 import org.opendaylight.yangtools.yang.common.QName;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier;
+import org.opendaylight.yangtools.yang.data.api.schema.MapEntryNode;
 import org.opendaylight.yangtools.yang.model.api.EffectiveModelContext;
 import org.opendaylight.yangtools.yang.model.api.NotificationDefinition;
 import org.opendaylight.yangtools.yang.model.api.stmt.NotificationEffectiveStatement;
-import org.osgi.service.component.annotations.Activate;
-import org.osgi.service.component.annotations.Component;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -45,10 +53,41 @@ import org.slf4j.LoggerFactory;
 // FIXME: furthermore, this should be tied to ietf-restconf-monitoring, as the Strings used in its maps are stream
 //        names. We essentially need a component which deals with allocation of stream names and their lifecycle and
 //        the contents of /restconf-state/streams.
-@Singleton
-@Component(service = ListenersBroker.class, immediate = true)
-public final class ListenersBroker {
+public abstract sealed class ListenersBroker {
+    /**
+     * A ListenersBroker working with Server-Sent Events.
+     */
+    public static final class ServerSentEvents extends ListenersBroker {
+        @Override
+        public URI prepareUriByStreamName(final UriInfo uriInfo, final String streamName) {
+            return uriInfo.getBaseUriBuilder()
+                .replacePath(URLConstants.BASE_PATH + '/' + URLConstants.SSE_SUBPATH + '/' + streamName)
+                .build();
+        }
+    }
+
+    /**
+     * A ListenersBroker working with WebSockets.
+     */
+    public static final class WebSockets extends ListenersBroker {
+        @Override
+        public URI prepareUriByStreamName(final UriInfo uriInfo, final String streamName) {
+            final var scheme = switch (uriInfo.getAbsolutePath().getScheme()) {
+                // Secured HTTP goes to Secured WebSockets
+                case "https" -> "wss";
+                // Unsecured HTTP and others go to unsecured WebSockets
+                default -> "ws";
+            };
+
+            return uriInfo.getBaseUriBuilder()
+                .scheme(scheme)
+                .replacePath(URLConstants.BASE_PATH + '/' + streamName)
+                .build();
+        }
+    }
+
     private static final Logger LOG = LoggerFactory.getLogger(ListenersBroker.class);
+    private static final Splitter SLASH_SPLITTER = Splitter.on('/');
 
     private final StampedLock dataChangeListenersLock = new StampedLock();
     private final StampedLock notificationListenersLock = new StampedLock();
@@ -57,10 +96,8 @@ public final class ListenersBroker {
     private final BiMap<String, NotificationListenerAdapter> notificationListeners = HashBiMap.create();
     private final BiMap<String, DeviceNotificationListenerAdaptor> deviceNotificationListeners = HashBiMap.create();
 
-    @Inject
-    @Activate
-    public ListenersBroker() {
-
+    private ListenersBroker() {
+        // Hidden on purpose
     }
 
     /**
@@ -71,7 +108,7 @@ public final class ListenersBroker {
      *         does not exist.
      * @throws NullPointerException in {@code streamName} is {@code null}
      */
-    public @Nullable ListenerAdapter dataChangeListenerFor(final String streamName) {
+    public final @Nullable ListenerAdapter dataChangeListenerFor(final String streamName) {
         requireNonNull(streamName);
 
         final long stamp = dataChangeListenersLock.readLock();
@@ -90,7 +127,7 @@ public final class ListenersBroker {
      *         stream name does not exist.
      * @throws NullPointerException in {@code streamName} is {@code null}
      */
-    public @Nullable NotificationListenerAdapter notificationListenerFor(final String streamName) {
+    public final @Nullable NotificationListenerAdapter notificationListenerFor(final String streamName) {
         requireNonNull(streamName);
 
         final long stamp = notificationListenersLock.readLock();
@@ -109,7 +146,7 @@ public final class ListenersBroker {
      *         specified stream name does not exist.
      * @throws NullPointerException in {@code path} is {@code null}
      */
-    public @Nullable DeviceNotificationListenerAdaptor deviceNotificationListenerFor(final String streamName) {
+    public final @Nullable DeviceNotificationListenerAdaptor deviceNotificationListenerFor(final String streamName) {
         requireNonNull(streamName);
 
         final long stamp = deviceNotificationListenersLock.readLock();
@@ -127,7 +164,7 @@ public final class ListenersBroker {
      * @return {@link NotificationListenerAdapter} or {@link ListenerAdapter} object wrapped in {@link Optional}
      *     or {@link Optional#empty()} if listener with specified stream name doesn't exist.
      */
-    public @Nullable BaseListenerInterface listenerFor(final String streamName) {
+    public final @Nullable BaseListenerInterface listenerFor(final String streamName) {
         if (streamName.startsWith(RestconfStreamsConstants.NOTIFICATION_STREAM)) {
             return notificationListenerFor(streamName);
         } else if (streamName.startsWith(RestconfStreamsConstants.DATA_SUBSCRIPTION)) {
@@ -147,7 +184,7 @@ public final class ListenersBroker {
      * @param outputType Specific type of output for notifications - XML or JSON.
      * @return Created or existing data-change listener adapter.
      */
-    public ListenerAdapter registerDataChangeListener(final EffectiveModelContext modelContext,
+    public final ListenerAdapter registerDataChangeListener(final EffectiveModelContext modelContext,
             final LogicalDatastoreType datastore, final YangInstanceIdentifier path, final Scope scope,
             final NotificationOutputType outputType) {
         final var sb = new StringBuilder(RestconfStreamsConstants.DATA_SUBSCRIPTION)
@@ -176,7 +213,7 @@ public final class ListenersBroker {
      * @param outputType Specific type of output for notifications - XML or JSON.
      * @return Created or existing notification listener adapter.
      */
-    public NotificationListenerAdapter registerNotificationListener(final EffectiveModelContext refSchemaCtx,
+    public final NotificationListenerAdapter registerNotificationListener(final EffectiveModelContext refSchemaCtx,
             final ImmutableSet<QName> notifications, final NotificationOutputType outputType) {
         final var sb = new StringBuilder(RestconfStreamsConstants.NOTIFICATION_STREAM).append('/');
         var haveFirst = false;
@@ -222,7 +259,7 @@ public final class ListenersBroker {
      * @param mountPointService Mount point service
      * @return Created or existing device notification listener adapter.
      */
-    public DeviceNotificationListenerAdaptor registerDeviceNotificationListener(final String deviceName,
+    public final DeviceNotificationListenerAdaptor registerDeviceNotificationListener(final String deviceName,
             final NotificationOutputType outputType, final EffectiveModelContext refSchemaCtx,
             final DOMMountPointService mountPointService, final YangInstanceIdentifier path) {
         final var sb = new StringBuilder(RestconfStreamsConstants.DEVICE_NOTIFICATION_STREAM).append('/')
@@ -241,7 +278,7 @@ public final class ListenersBroker {
     /**
      * Removal and closing of all data-change-event and notification listeners.
      */
-    public synchronized void removeAndCloseAllListeners() {
+    public final synchronized void removeAndCloseAllListeners() {
         final long stampNotifications = notificationListenersLock.writeLock();
         final long stampDataChanges = dataChangeListenersLock.writeLock();
         try {
@@ -256,7 +293,7 @@ public final class ListenersBroker {
     /**
      * Closes and removes all data-change listeners.
      */
-    public void removeAndCloseAllDataChangeListeners() {
+    public final void removeAndCloseAllDataChangeListeners() {
         final long stamp = dataChangeListenersLock.writeLock();
         try {
             removeAndCloseAllDataChangeListenersTemplate();
@@ -267,23 +304,22 @@ public final class ListenersBroker {
 
     @SuppressWarnings("checkstyle:IllegalCatch")
     private void removeAndCloseAllDataChangeListenersTemplate() {
-        dataChangeListeners.values()
-                .forEach(listenerAdapter -> {
-                    try {
-                        listenerAdapter.close();
-                    } catch (final Exception exception) {
-                        LOG.error("Failed to close data-change listener {}.", listenerAdapter, exception);
-                        throw new IllegalStateException(String.format("Failed to close data-change listener %s.",
-                                listenerAdapter), exception);
-                    }
-                });
+        dataChangeListeners.values().forEach(listenerAdapter -> {
+            try {
+                listenerAdapter.close();
+            } catch (Exception e) {
+                LOG.error("Failed to close data-change listener {}.", listenerAdapter, e);
+                throw new IllegalStateException("Failed to close data-change listener %s.".formatted(listenerAdapter),
+                    e);
+            }
+        });
         dataChangeListeners.clear();
     }
 
     /**
      * Closes and removes all notification listeners.
      */
-    public void removeAndCloseAllNotificationListeners() {
+    public final void removeAndCloseAllNotificationListeners() {
         final long stamp = notificationListenersLock.writeLock();
         try {
             removeAndCloseAllNotificationListenersTemplate();
@@ -294,16 +330,15 @@ public final class ListenersBroker {
 
     @SuppressWarnings("checkstyle:IllegalCatch")
     private void removeAndCloseAllNotificationListenersTemplate() {
-        notificationListeners.values()
-                .forEach(listenerAdapter -> {
-                    try {
-                        listenerAdapter.close();
-                    } catch (final Exception exception) {
-                        LOG.error("Failed to close notification listener {}.", listenerAdapter, exception);
-                        throw new IllegalStateException(String.format("Failed to close notification listener %s.",
-                                listenerAdapter), exception);
-                    }
-                });
+        notificationListeners.values().forEach(listenerAdapter -> {
+            try {
+                listenerAdapter.close();
+            } catch (Exception e) {
+                LOG.error("Failed to close notification listener {}.", listenerAdapter, e);
+                throw new IllegalStateException("Failed to close notification listener %s.".formatted(listenerAdapter),
+                    e);
+            }
+        });
         notificationListeners.clear();
     }
 
@@ -313,11 +348,11 @@ public final class ListenersBroker {
      * @param listener Listener to be closed and removed.
      */
     @SuppressWarnings("checkstyle:IllegalCatch")
-    public void removeAndCloseDataChangeListener(final ListenerAdapter listener) {
+    public final void removeAndCloseDataChangeListener(final ListenerAdapter listener) {
         final long stamp = dataChangeListenersLock.writeLock();
         try {
             removeAndCloseDataChangeListenerTemplate(listener);
-        } catch (final Exception exception) {
+        } catch (Exception exception) {
             LOG.error("Data-change listener {} cannot be closed.", listener, exception);
         } finally {
             dataChangeListenersLock.unlockWrite(stamp);
@@ -335,11 +370,9 @@ public final class ListenersBroker {
             if (dataChangeListeners.inverse().remove(listener) == null) {
                 LOG.warn("There isn't any data-change event stream that would match listener adapter {}.", listener);
             }
-        } catch (final InterruptedException | ExecutionException exception) {
-            LOG.error("Data-change listener {} cannot be closed.", listener, exception);
-            throw new IllegalStateException(String.format(
-                    "Data-change listener %s cannot be closed.",
-                    listener), exception);
+        } catch (InterruptedException | ExecutionException e) {
+            LOG.error("Data-change listener {} cannot be closed.", listener, e);
+            throw new IllegalStateException("Data-change listener %s cannot be closed.".formatted(listener), e);
         }
     }
 
@@ -349,12 +382,12 @@ public final class ListenersBroker {
      * @param listener Listener to be closed and removed.
      */
     @SuppressWarnings("checkstyle:IllegalCatch")
-    public void removeAndCloseNotificationListener(final NotificationListenerAdapter listener) {
+    public final void removeAndCloseNotificationListener(final NotificationListenerAdapter listener) {
         final long stamp = notificationListenersLock.writeLock();
         try {
             removeAndCloseNotificationListenerTemplate(listener);
-        } catch (final Exception exception) {
-            LOG.error("Notification listener {} cannot be closed.", listener, exception);
+        } catch (Exception e) {
+            LOG.error("Notification listener {} cannot be closed.", listener, e);
         } finally {
             notificationListenersLock.unlockWrite(stamp);
         }
@@ -367,7 +400,7 @@ public final class ListenersBroker {
      * @param listener Listener to be closed and removed.
      */
     @SuppressWarnings("checkstyle:IllegalCatch")
-    public void removeAndCloseDeviceNotificationListener(final DeviceNotificationListenerAdaptor listener) {
+    public final void removeAndCloseDeviceNotificationListener(final DeviceNotificationListenerAdaptor listener) {
         final long stamp = deviceNotificationListenersLock.writeLock();
         try {
             requireNonNull(listener);
@@ -387,11 +420,9 @@ public final class ListenersBroker {
             if (notificationListeners.inverse().remove(listener) == null) {
                 LOG.warn("There isn't any notification stream that would match listener adapter {}.", listener);
             }
-        } catch (final InterruptedException | ExecutionException exception) {
-            LOG.error("Notification listener {} cannot be closed.", listener, exception);
-            throw new IllegalStateException(String.format(
-                    "Notification listener %s cannot be closed.", listener),
-                    exception);
+        } catch (InterruptedException | ExecutionException e) {
+            LOG.error("Notification listener {} cannot be closed.", listener, e);
+            throw new IllegalStateException("Notification listener %s cannot be closed.".formatted(listener), e);
         }
     }
 
@@ -400,7 +431,7 @@ public final class ListenersBroker {
      *
      * @param listener Listener to be closed and removed from cache.
      */
-    void removeAndCloseListener(final BaseListenerInterface listener) {
+    final void removeAndCloseListener(final BaseListenerInterface listener) {
         requireNonNull(listener);
         if (listener instanceof ListenerAdapter) {
             removeAndCloseDataChangeListener((ListenerAdapter) listener);
@@ -431,5 +462,106 @@ public final class ListenersBroker {
             result = result.substring(0, result.length() - 1);
         }
         return result;
+    }
+
+    /**
+     * Prepare URL from base name and stream name.
+     *
+     * @param uriInfo base URL information
+     * @param streamName name of stream for create
+     * @return final URL
+     */
+    public abstract @NonNull URI prepareUriByStreamName(UriInfo uriInfo, String streamName);
+
+    /**
+     * Register listener by streamName in identifier to listen to yang notifications, and put or delete information
+     * about listener to DS according to ietf-restconf-monitoring.
+     *
+     * @param identifier              Name of the stream.
+     * @param uriInfo                 URI information.
+     * @param notificationQueryParams Query parameters of notification.
+     * @param handlersHolder          Holder of handlers for notifications.
+     * @return Stream location for listening.
+     */
+    public final @NonNull URI subscribeToYangStream(final String identifier, final UriInfo uriInfo,
+            final NotificationQueryParams notificationQueryParams, final HandlersHolder handlersHolder) {
+        final String streamName = createStreamNameFromUri(identifier);
+        if (isNullOrEmpty(streamName)) {
+            throw new RestconfDocumentedException("Stream name is empty.", ErrorType.PROTOCOL, ErrorTag.INVALID_VALUE);
+        }
+
+        final var notificationListenerAdapter = notificationListenerFor(streamName);
+        if (notificationListenerAdapter == null) {
+            throw new RestconfDocumentedException("Stream with name %s was not found.".formatted(streamName),
+                ErrorType.PROTOCOL, ErrorTag.UNKNOWN_ELEMENT);
+        }
+
+        final URI uri = prepareUriByStreamName(uriInfo, streamName);
+        notificationListenerAdapter.setQueryParams(notificationQueryParams);
+        notificationListenerAdapter.listen(handlersHolder.notificationService());
+        final DOMDataBroker dataBroker = handlersHolder.dataBroker();
+        notificationListenerAdapter.setCloseVars(dataBroker, handlersHolder.databindProvider());
+        final MapEntryNode mapToStreams = RestconfStateStreams.notificationStreamEntry(streamName,
+            notificationListenerAdapter.qnames(), notificationListenerAdapter.getStart(),
+            notificationListenerAdapter.getOutputType(), uri);
+
+        // FIXME: how does this correlate with the transaction notificationListenerAdapter.close() will do?
+        final DOMDataTreeWriteTransaction writeTransaction = dataBroker.newWriteOnlyTransaction();
+        writeDataToDS(writeTransaction, mapToStreams);
+        submitData(writeTransaction);
+        return uri;
+    }
+
+    /**
+     * Register listener by streamName in identifier to listen to data change notifications, and put or delete
+     * information about listener to DS according to ietf-restconf-monitoring.
+     *
+     * @param identifier              Identifier as stream name.
+     * @param uriInfo                 Base URI information.
+     * @param notificationQueryParams Query parameters of notification.
+     * @param handlersHolder          Holder of handlers for notifications.
+     * @return Location for listening.
+     */
+    public final URI subscribeToDataStream(final String identifier, final UriInfo uriInfo,
+            final NotificationQueryParams notificationQueryParams, final HandlersHolder handlersHolder) {
+        final var streamName = createStreamNameFromUri(identifier);
+        final var listener = dataChangeListenerFor(streamName);
+        if (listener == null) {
+            throw new RestconfDocumentedException("No listener found for stream " + streamName,
+                ErrorType.APPLICATION, ErrorTag.DATA_MISSING);
+        }
+
+        listener.setQueryParams(notificationQueryParams);
+
+        final var dataBroker = handlersHolder.dataBroker();
+        final var schemaHandler = handlersHolder.databindProvider();
+        listener.setCloseVars(dataBroker, schemaHandler);
+        listener.listen(dataBroker);
+
+        final var uri = prepareUriByStreamName(uriInfo, streamName);
+        final var schemaContext = schemaHandler.currentContext().modelContext();
+        final var serializedPath = IdentifierCodec.serialize(listener.getPath(), schemaContext);
+
+        final var mapToStreams = RestconfStateStreams.dataChangeStreamEntry(listener.getPath(),
+                listener.getStart(), listener.getOutputType(), uri, schemaContext, serializedPath);
+        final var writeTransaction = dataBroker.newWriteOnlyTransaction();
+        writeDataToDS(writeTransaction, mapToStreams);
+        submitData(writeTransaction);
+        return uri;
+    }
+
+    // FIXME: callers are utter duplicates, refactor them
+    private static void writeDataToDS(final DOMDataTreeWriteOperations tx, final MapEntryNode mapToStreams) {
+        // FIXME: use put() here
+        tx.merge(LogicalDatastoreType.OPERATIONAL, RestconfStateStreams.restconfStateStreamPath(mapToStreams.name()),
+            mapToStreams);
+    }
+
+    private static void submitData(final DOMDataTreeWriteTransaction readWriteTransaction) {
+        try {
+            readWriteTransaction.commit().get();
+        } catch (final InterruptedException | ExecutionException e) {
+            throw new RestconfDocumentedException("Problem while putting data to DS.", e);
+        }
     }
 }
